--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -25,6 +25,9 @@
   "active": {
     "message": "Aktywny"
   },
+  "activities": {
+    "message": "Aktywności"
+  },
   "ad_blocking": {
     "message": "Blokowanie reklam"
   },
@@ -34,6 +37,9 @@
   "add_@_0__as_exception": {
     "message": "Dodaj $${0} do wyjątków",
     "description": "Add domain as exception"
+  },
+  "add_website": {
+    "message": "Dodaj stronę internetową."
   },
   "add_website_exception": {
     "message": "Dodaj wyjątek dla tej witryny"
@@ -76,6 +82,9 @@
     "message": "Odtwarzacz audio/wideo",
     "description": "Tracker category name"
   },
+  "automatically_rejects_cookie_consent_notices_": {
+    "message": "Automatycznie odrzuca komunikaty dotyczące zgody na pliki cookie."
+  },
   "automatically_rejects_of_cookie_consent_notices_": {
     "message": "Automatycznie odrzuca komunikaty dotyczące zgody na pliki cookie."
   },
@@ -100,10 +109,6 @@
   "blocked___tracker_list": {
     "message": "Zablokowane",
     "description": "Plural form - list of blocked trackers"
-  },
-  "blocked__@_0_": {
-    "message": "Zablokowane: $${0}",
-    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
   },
   "blocked_on_all_websites": {
     "message": "Zablokowany wszędzie"
@@ -197,6 +202,9 @@
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "Ze względu na ograniczenia przeglądarki i brak dodatkowych uprawnień, Ghostery nie jest w stanie Cię chronić."
   },
+  "eliminates_ads_on_websites_for_safe_and_fast_browsing_": {
+    "message": "Usuwa reklamy na stronach internetowych, zapewniając bezpieczniejsze i szybsze przeglądanie."
+  },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
     "message": "Usuwa reklamy na stronach internetowych, zapewniając bezpieczniejsze i szybsze przeglądanie."
   },
@@ -251,9 +259,6 @@
   "for_more_information_read_our_full": {
     "message": "Aby uzyskać więcej informacji, przeczytaj "
   },
-  "further_protection": {
-    "message": "Dalsza ochrona"
-  },
   "get_help": {
     "message": "Uzyskaj pomoc"
   },
@@ -265,6 +270,9 @@
   },
   "ghostery_can_t_block_them_due_to_missing_permissions_": {
     "message": "Ghostery nie może ich blokować, ponieważ nie ma uprawnień."
+  },
+  "ghostery_has_been_resumed_": {
+    "message": "Ghostery zostało wznowione."
   },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghostery zostało wznowione dla tej witryny."
@@ -280,6 +288,9 @@
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "Ghostery jest zainstalowany z ograniczoną funkcjonalnością"
+  },
+  "ghostery_is_paused": {
+    "message": "Ghostery wstrzymane"
   },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery jest wstrzymane dla tej witryny."
@@ -376,6 +387,9 @@
     "message": "Różne",
     "description": "Tracker category name"
   },
+  "missing__pause_ghostery___you_can_find_it_in_your_privacy_protection_settings_": {
+    "message": "Szukasz „Wstrzymaj Ghostery”? Możesz je znaleźć w ustawieniach ochrony prywatności."
+  },
   "modify_the_recommended_blocking_settings_for_every_website_": {
     "message": "Zmodyfikuj zalecane ustawienia blokowania dla każdej witryny."
   },
@@ -421,6 +435,9 @@
   "on": {
     "message": "Wł."
   },
+  "open_ghostery_settings": {
+    "message": "Otwórz Ustawienia Ghostery"
+  },
   "open_video": {
     "message": "Otwórz wideo"
   },
@@ -440,11 +457,8 @@
   "our_recommendation_for_this_activity": {
     "message": "Nasze zalecenia dla tej aktywności"
   },
-  "pause_on_this_site": {
-    "message": "Wstrzymaj na tej stronie"
-  },
-  "paused": {
-    "message": "Wstrzymane"
+  "pause_ghostery": {
+    "message": "Wstrzymaj Ghostery"
   },
   "permission_required": {
     "message": "Wymagane uprawnienia"
@@ -458,6 +472,9 @@
   "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "Uniemożliwiaj Google przekierowywanie łączy do wyników wyszukiwania przez ich serwery zamiast bezpośredniego łączenia do stron."
   },
+  "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
+    "message": "Uniemożliwiaj Google przekierowywanie łączy do wyników wyszukiwania przez ich serwery zamiast bezpośredniego łączenia do stron."
+  },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
     "message": "Chroń swoje dane przed śledzeniem w sieci dzięki technologii wspomaganej przez SI"
   },
@@ -469,9 +486,6 @@
   },
   "privacy_protection": {
     "message": "Ochrona prywatności"
-  },
-  "protection": {
-    "message": "ochrona"
   },
   "protection_exceptions": {
     "message": "Wyjątki ochrony"
@@ -494,12 +508,6 @@
   "report_a_broken_page": {
     "message": "Zgłoś zepsutą stronę"
   },
-  "resume": {
-    "message": "Wznów"
-  },
-  "resume_protection": {
-    "message": "Wznów ochronę"
-  },
   "save": {
     "message": "Zapisz"
   },
@@ -514,6 +522,12 @@
   },
   "search_website___": {
     "message": "Szukaj witryny..."
+  },
+  "select_time_frame": {
+    "message": "Wybierz przedział czasowy"
+  },
+  "send_feedback": {
+    "message": "Wyślij opinię"
   },
   "set_blocking_preference": {
     "message": "Ustaw preferencje blokowania"
@@ -556,6 +570,9 @@
   "submit_a_new_tracker": {
     "message": "Zgłoś nowego tropiciela"
   },
+  "suspends_privacy_protection_globally_for_1_day_": {
+    "message": "Zawiesza ochronę prywatności globalnie na 1 dzień."
+  },
   "telemetry": {
     "message": "Telemetria",
     "description": "Tracker category name"
@@ -565,6 +582,9 @@
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Dziękujemy za Twoje wsparcie w walce Ghostery o sieć, w której prywatność jest podstawowym prawem człowieka!"
+  },
+  "to_adjust_privacy_protection_trust_a_site_": {
+    "message": "Aby dostosować ochronę prywatności, zaufaj witrynie:"
   },
   "tracker_database": {
     "message": "Baza danych Trackerów"
@@ -605,10 +625,6 @@
   "trusted___tracker_list": {
     "message": "Zaufane",
     "description": "Plural form - list of trusted trackers"
-  },
-  "trusted__@_0_": {
-    "message": "Zaufane: $${0}",
-    "description": "A number of trusted trackers eg: 'Trusted: 2'"
   },
   "trusted_on_all_websites": {
     "message": "Zaufany wszędzie"
@@ -676,9 +692,6 @@
   },
   "you_are_signed_in_as_": {
     "message": "Zalogowano jako:"
-  },
-  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "Możesz dostosować ustawienia poniżej. Zalecamy, aby pozostawić je zawsze WŁĄCZONE."
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Wykresy kołowe z trackerami nie będą wyświetlane obok wyników wyszukiwania."
