--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -25,6 +25,9 @@
   "active": {
     "message": "Aktiv"
   },
+  "activities": {
+    "message": "Aktivitäten"
+  },
   "ad_blocking": {
     "message": "Werbeblocker"
   },
@@ -34,6 +37,9 @@
   "add_@_0__as_exception": {
     "message": "$${0} als Ausnahme hinzufügen",
     "description": "Add domain as exception"
+  },
+  "add_website": {
+    "message": "Webseite hinzufügen"
   },
   "add_website_exception": {
     "message": "Website-Ausnahme hinzufügen"
@@ -76,6 +82,9 @@
     "message": "Audio/Video-Player",
     "description": "Tracker category name"
   },
+  "automatically_rejects_cookie_consent_notices_": {
+    "message": "Lehnt Cookie-Einwilligungserklärungen automatisch ab."
+  },
   "automatically_rejects_of_cookie_consent_notices_": {
     "message": "Lehnt Cookie-Einwilligungserklärungen automatisch ab."
   },
@@ -100,10 +109,6 @@
   "blocked___tracker_list": {
     "message": "Blockiert",
     "description": "Plural form - list of blocked trackers"
-  },
-  "blocked__@_0_": {
-    "message": "Blockiert: $${0}",
-    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
   },
   "blocked_on_all_websites": {
     "message": "Auf allen Websites blockiert"
@@ -197,6 +202,9 @@
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "Aufgrund von Browser-Einschränkungen und fehlenden zusätzlichen Berechtigungen kann Ghostery Sie nicht schützen."
   },
+  "eliminates_ads_on_websites_for_safe_and_fast_browsing_": {
+    "message": "Entfernt Werbung auf Websites für sicheres und schnelles Surfen."
+  },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
     "message": "Entfernt Werbung auf Websites für sicheres und schnelles Surfen."
   },
@@ -251,9 +259,6 @@
   "for_more_information_read_our_full": {
     "message": "Für weitere Informationen lesen Sie bitte unsere vollständigen"
   },
-  "further_protection": {
-    "message": "Zusätzlicher Schutz"
-  },
   "get_help": {
     "message": "Hilfe erhalten"
   },
@@ -265,6 +270,9 @@
   },
   "ghostery_can_t_block_them_due_to_missing_permissions_": {
     "message": "Ghostery kann sie aufgrund fehlender Berechtigungen nicht blocken."
+  },
+  "ghostery_has_been_resumed_": {
+    "message": "Ghostery wird fortgesetzt."
   },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghostery wird auf dieser Website fortgesetzt."
@@ -280,6 +288,9 @@
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "Ghostery ist mit eingeschränkter Funktionalität installiert"
+  },
+  "ghostery_is_paused": {
+    "message": "Ghostery pausiert"
   },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery pausiert auf dieser Website."
@@ -370,11 +381,14 @@
     "message": "Menü"
   },
   "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Beachten Sie, dass nicht alle genannten Einheiten Tracker sind, d.h. nicht alle sammeln persönliche Daten."
+    "message": "Beachten Sie, dass nicht alle genannten Einträge Tracker sind, d.h. nicht alle sammeln persönliche Daten."
   },
   "miscellaneous": {
     "message": "Sonstiges",
     "description": "Tracker category name"
+  },
+  "missing__pause_ghostery___you_can_find_it_in_your_privacy_protection_settings_": {
+    "message": "Die Funktion „Ghostery pausieren“ finden Sie in den Einstellungen."
   },
   "modify_the_recommended_blocking_settings_for_every_website_": {
     "message": "Ändern Sie die empfohlenen Blockierungseinstellungen für jede Website."
@@ -421,6 +435,9 @@
   "on": {
     "message": "An"
   },
+  "open_ghostery_settings": {
+    "message": "Ghostery Einstellungen öffnen"
+  },
   "open_video": {
     "message": "Video öffnen"
   },
@@ -440,11 +457,8 @@
   "our_recommendation_for_this_activity": {
     "message": "Unsere Empfehlung für diese Aktivität"
   },
-  "pause_on_this_site": {
-    "message": "Auf dieser Seite pausieren"
-  },
-  "paused": {
-    "message": "Pausiert"
+  "pause_ghostery": {
+    "message": "Ghostery pausieren"
   },
   "permission_required": {
     "message": "Berechtigung erforderlich"
@@ -458,6 +472,9 @@
   "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "Verhindern, dass Google die Links der Suchergebnisse über seine Server umleitet, anstatt sie direkt mit den Seiten zu verknüpfen."
   },
+  "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
+    "message": "Verhindern, dass Google die Links der Suchergebnisse über seine Server umleitet, anstatt sie direkt mit den Seiten zu verknüpfen."
+  },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
     "message": "Nutzt KI-basierte Technologie, um verschiedene Tracking-Techniken zu verhindern."
   },
@@ -469,9 +486,6 @@
   },
   "privacy_protection": {
     "message": "Datenschutz"
-  },
-  "protection": {
-    "message": "Schutz"
   },
   "protection_exceptions": {
     "message": "Schutzausnahmen"
@@ -494,12 +508,6 @@
   "report_a_broken_page": {
     "message": "Fehlerhafte Seite melden"
   },
-  "resume": {
-    "message": "Fortsetzen"
-  },
-  "resume_protection": {
-    "message": "Schutz fortsetzen"
-  },
   "save": {
     "message": "Speichern"
   },
@@ -514,6 +522,12 @@
   },
   "search_website___": {
     "message": "Website durchsuchen ..."
+  },
+  "select_time_frame": {
+    "message": "Zeitraum auswählen"
+  },
+  "send_feedback": {
+    "message": "Feedback senden"
   },
   "set_blocking_preference": {
     "message": "Blockierungspräferenzen festlegen"
@@ -556,6 +570,9 @@
   "submit_a_new_tracker": {
     "message": "Neuen Tracker senden"
   },
+  "suspends_privacy_protection_globally_for_1_day_": {
+    "message": "Deaktiviert den Ghostery-Schutz für 1 Tag."
+  },
   "telemetry": {
     "message": "Telemetrie",
     "description": "Tracker category name"
@@ -565,6 +582,9 @@
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Vielen Dank für Ihre Unterstützung im Kampf von Ghostery für ein Internet, in dem Datenschutz ein grundlegendes Menschenrecht ist!"
+  },
+  "to_adjust_privacy_protection_trust_a_site_": {
+    "message": "Zur Anpassung der Einstellungen, vertrauen Sie einer Webseite:"
   },
   "tracker_database": {
     "message": "Tracker Datenbank"
@@ -605,10 +625,6 @@
   "trusted___tracker_list": {
     "message": "Vertrauenswürdig",
     "description": "Plural form - list of trusted trackers"
-  },
-  "trusted__@_0_": {
-    "message": "Vertraut: $${0}",
-    "description": "A number of trusted trackers eg: 'Trusted: 2'"
   },
   "trusted_on_all_websites": {
     "message": "Auf allen Websites vertraut"
@@ -676,9 +692,6 @@
   },
   "you_are_signed_in_as_": {
     "message": "Sie sind angemeldet als:"
-  },
-  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "Sie können die Einstellungen unten anpassen. Wir empfehlen, sie immer auf AN zu lassen."
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Neben den Suchergebnissen werden keine Tracker-Räder mehr angezeigt."
