--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -25,6 +25,9 @@
   "active": {
     "message": "Attivo"
   },
+  "activities": {
+    "message": "Attività"
+  },
   "ad_blocking": {
     "message": "Blocco pubblicità"
   },
@@ -34,6 +37,9 @@
   "add_@_0__as_exception": {
     "message": "Aggiungi $${0} come eccezione",
     "description": "Add domain as exception"
+  },
+  "add_website": {
+    "message": "Aggiungi sito web"
   },
   "add_website_exception": {
     "message": "Aggiungi un’eccezione al sito"
@@ -76,6 +82,9 @@
     "message": "Lettore Audio/Video",
     "description": "Tracker category name"
   },
+  "automatically_rejects_cookie_consent_notices_": {
+    "message": "Rifiuta automaticamente notifiche di consenso dei cookie."
+  },
   "automatically_rejects_of_cookie_consent_notices_": {
     "message": "Rifiuta automaticamente notifiche di consenso dei cookie."
   },
@@ -100,10 +109,6 @@
   "blocked___tracker_list": {
     "message": "Bloccati",
     "description": "Plural form - list of blocked trackers"
-  },
-  "blocked__@_0_": {
-    "message": "Bloccati: $${0}",
-    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
   },
   "blocked_on_all_websites": {
     "message": "Blocco effettuato su tutti i siti"
@@ -197,6 +202,9 @@
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "A causa delle limitazioni del browser e alla mancanza di alcune autorizzazioni, Ghostery non è in grado di proteggerti."
   },
+  "eliminates_ads_on_websites_for_safe_and_fast_browsing_": {
+    "message": "Elimina la pubblicità nei siti web per una navigazione sicura e veloce."
+  },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
     "message": "Elimina la pubblicità nei siti web per una navigazione sicura e veloce."
   },
@@ -251,9 +259,6 @@
   "for_more_information_read_our_full": {
     "message": "Per maggiori informazioni, visita il nostro sito"
   },
-  "further_protection": {
-    "message": "Protezione ulteriore"
-  },
   "get_help": {
     "message": "Ricevi aiuto"
   },
@@ -265,6 +270,9 @@
   },
   "ghostery_can_t_block_them_due_to_missing_permissions_": {
     "message": "Ghostery non può bloccarli a causa di autorizzazioni mancanti."
+  },
+  "ghostery_has_been_resumed_": {
+    "message": "Ghostery è stato ripreso."
   },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghostery è stato ripristinato su questo sito."
@@ -280,6 +288,9 @@
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "Ghostery è installato con funzionalità limitate"
+  },
+  "ghostery_is_paused": {
+    "message": "Ghostery è in pausa"
   },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery è in pausa su questo sito."
@@ -376,6 +387,9 @@
     "message": "Varie",
     "description": "Tracker category name"
   },
+  "missing__pause_ghostery___you_can_find_it_in_your_privacy_protection_settings_": {
+    "message": "Manca \"Metti in pausa Ghostery\"? Puoi trovarla nelle impostazioni di protezione della privacy."
+  },
   "modify_the_recommended_blocking_settings_for_every_website_": {
     "message": "Modifica le impostazioni di blocco consigliate per ciascun sito."
   },
@@ -421,6 +435,9 @@
   "on": {
     "message": "Attivo"
   },
+  "open_ghostery_settings": {
+    "message": "Apri le impostazioni di Ghostery"
+  },
   "open_video": {
     "message": "Aprire il video"
   },
@@ -440,11 +457,8 @@
   "our_recommendation_for_this_activity": {
     "message": "Il nostro consiglio per questa attività"
   },
-  "pause_on_this_site": {
-    "message": "Pausa su questo sito"
-  },
-  "paused": {
-    "message": "In pausa"
+  "pause_ghostery": {
+    "message": "Metti in pausa Ghostery"
   },
   "permission_required": {
     "message": "Autorizzazione richiesta"
@@ -458,6 +472,9 @@
   "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "Impedisci a Google di reindirizzare i link dei risultati di ricerca ai suoi server anziché direttamente alle pagine."
   },
+  "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
+    "message": "Impedisci a Google di reindirizzare i link dei risultati di ricerca ai suoi server anziché direttamente alle pagine."
+  },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
     "message": "Impedisce varie tecniche di tracciamento tramite tecnologia Al-driven."
   },
@@ -469,9 +486,6 @@
   },
   "privacy_protection": {
     "message": "Protezione della privacy"
-  },
-  "protection": {
-    "message": "protezione"
   },
   "protection_exceptions": {
     "message": "Eccezioni di protezione"
@@ -494,12 +508,6 @@
   "report_a_broken_page": {
     "message": "Segnala una pagina orfana"
   },
-  "resume": {
-    "message": "Riattiva"
-  },
-  "resume_protection": {
-    "message": "Protezione del curriculum"
-  },
   "save": {
     "message": "Salva"
   },
@@ -514,6 +522,12 @@
   },
   "search_website___": {
     "message": "Ricerca sito web..."
+  },
+  "select_time_frame": {
+    "message": "Seleziona intervallo di tempo"
+  },
+  "send_feedback": {
+    "message": "Invia feedback"
   },
   "set_blocking_preference": {
     "message": "Imposta preferenza di blocco"
@@ -556,6 +570,9 @@
   "submit_a_new_tracker": {
     "message": "Invia un nuovo tracker"
   },
+  "suspends_privacy_protection_globally_for_1_day_": {
+    "message": "Sospende la protezione della privacy a livello globale per 1 giorno."
+  },
   "telemetry": {
     "message": "Telemetria",
     "description": "Tracker category name"
@@ -565,6 +582,9 @@
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Grazie per aver sostenuto Ghostery nel suo impegno per un web in cui la privacy sia un diritto umano fondamentale!"
+  },
+  "to_adjust_privacy_protection_trust_a_site_": {
+    "message": "Per regolare la protezione della privacy, fidati di un sito:"
   },
   "tracker_database": {
     "message": "Database Tracker"
@@ -605,10 +625,6 @@
   "trusted___tracker_list": {
     "message": "Considerati affidabili",
     "description": "Plural form - list of trusted trackers"
-  },
-  "trusted__@_0_": {
-    "message": "Considerati affidabili: $${0}",
-    "description": "A number of trusted trackers eg: 'Trusted: 2'"
   },
   "trusted_on_all_websites": {
     "message": "Considerati affidabili su tutti i siti"
@@ -676,9 +692,6 @@
   },
   "you_are_signed_in_as_": {
     "message": "Hai effettuato l’accesso come:"
-  },
-  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "Puoi modificare le impostazioni di seguito. Consigliamo di mantenerle sempre attive. "
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Non vedrai più le ruote del tracker vicino ai risultati della ricerca."
